<resources>
    <string name="app_name">Stadium Tracker</string>
    <string name="main_menu">Main Menu</string>
    <string name="prompt_login">Username or Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in_short">Username or Email</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_main_menu_record">Record A Visit</string>
    <string name="stadiums_list_title">List of Stadiums</string>
    <string name="stadiums_list_col1">Stadium</string>
    <string name="stadiums_list_col2"># Of Visits</string>
    <string name="action_main_menu_stadiums">View List of Stadiums</string>
    <string name="action_main_menu_visit">View All Visits</string>
    <string name="action_logout">Logout</string>
    <string name="action_gps">Fill W/ GPS</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_main_menu_friends">Friends List</string>
    <string name="record_stadium_hint">Select A Stadium</string>
    <string name="vs">Vs.</string>
    <string name="home_team">Home Team</string>
    <string name="road_team">Road Team</string>
    <string name="home_score">Home Score</string>
    <string name="road_score">Road Score</string>
    <string name="city">City, Country</string>
    <string name="masterUser">admin</string>
    <string name="masterPass">password</string>
    <string name="ip">database-2.ctqwj4cnvuoo.us-east-2.rds.amazonaws.com</string>
    <string name="port">1433</string>
    <string name="db_name">stadiumTrackerDB</string>
    <string name="sort_popup_asc">Ascending</string>
    <string name="sort_popup_dsc">Descending</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="no_image">No Image Found</string>
    <string name="stadium_view_col_info">Game Info</string>
    <string name="stadium_view_col_res">Result</string>
    <string name="friend_menu_title">Friends List</string>
    <string name="action_add_friend">Add A Friend</string>
    <string name="action_friends_list_friend_requests">Friend Requests</string>
    <string name="addFriend">Add Friend</string>
    <string name="compare_menu_title">Compare With Friend</string>
    <string name="visit_list_title">List of Visits</string>
    <string name="visit_list_col1">Event</string>
    <string name="visit_list_col2">Result</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="score_diff">Score Difference</string>
    <string name="above">Above</string>
    <string name="below">Below</string>
    <string name="score_max">Maximum Score</string>
    <string name="score_min">Minimum Score</string>
    <string name="individual">Individual</string>
    <string name="combined">Combined</string>
    <string name="uniqueStadiumsVisited">"Number of Stadiums Visited: "</string>
    <string name="totalNumberOfVisits">"Total Number Of Events Attended: "</string>
    <string name="compareStadiumsVisited">Compare Stadiums Visited</string>
    <string name="compareVisits" >Compare Visits</string>
    <string name="compare_stadiums_title">Compare Stadiums Visited</string>
    <string name="placeholderText">Placeholder</string>
    <string name="removeFriend">Remove Friend</string>
    <string name="compare_visits_title">Compare Events Visited</string>
    <string name="action_stub">Virtual Ticket Stub</string>
    <string name="friendRequest">Friend Requests</string>
    <string name="addButtonText">Add</string>
    <string name="deleteButtonText">Delete</string>
    <string name="list_of_events">List of Events</string>
    <string name="friend_image_display">Friend Image</string>
    <string name="user_image_view">User Image</string>
</resources>
