<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_icon"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_icon"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/filter_icon"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"/>
</menu>