<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_stub"
        android:icon="@drawable/stub_icon"
        android:title="@string/action_stub"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_icon"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_icon"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"/>
</menu>