<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/sort_popup_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sort_popup_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_popup_spinner">

        <RadioButton
            android:id="@+id/sort_popup_radio_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_popup_asc"/>

        <RadioButton
            android:id="@+id/sort_popup_radio_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_popup_dsc"/>
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/sort_popup_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/sort_popup_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sort_popup_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/sort_popup_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>