<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003">

        <TextView
            android:id="@+id/senderName"
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/addButton"
            android:text="@string/placeholderText"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/deleteButton"
            android:text="@string/addButtonText" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="23dp"
            android:text="@string/deleteButtonText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>