<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/compare_list_display_layout"
        android:layout_width="411dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_image_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/user_image_view"
            app:srcCompat="@drawable/baseline_check_black_18dp" />

        <ImageView
            android:id="@+id/friend_image_view"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/user_image_view"
            android:contentDescription="@string/friend_image_display"
            app:srcCompat="@drawable/baseline_check_black_18dp" />

        <TextView
            android:id="@+id/compare_list_text_view"
            android:layout_width="241dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="1dp"
            android:text="@string/placeholderText"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>