<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/friend_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FriendName"
        android:layout_width="392dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/placeholderText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_view_toolbar" />

    <TextView
        android:id="@+id/uniqueStadiumsVisited"
        android:layout_width="208dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/uniqueStadiumsVisited"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FriendName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalNumberOfVisits"
        android:layout_width="208dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/totalNumberOfVisits"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uniqueStadiumsVisited"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/compareStadiumsVisited"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="compareStadiums"
        android:text="@string/compareStadiumsVisited"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalNumberOfVisits"
        app:layout_constraintVertical_bias="0.534" />

    <Button
        android:id="@+id/compare_visits_title"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="compareVisits"
        android:text="@string/compareVisits"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/compareStadiumsVisited"
        app:layout_constraintTop_toBottomOf="@+id/totalNumberOfVisits"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/stadiums_visited_count"
        android:layout_width="170dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/placeholderText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/uniqueStadiumsVisited"
        app:layout_constraintTop_toBottomOf="@+id/FriendName" />

    <TextView
        android:id="@+id/visits_count"
        android:layout_width="170dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/placeholderText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalNumberOfVisits"
        app:layout_constraintTop_toBottomOf="@+id/stadiums_visited_count" />
</android.support.constraint.ConstraintLayout>