<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/visit_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/visit_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/visit_list_title"
        android:textSize="32sp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@id/visit_list_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/visit_list_headers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/visit_list_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/visit_list_col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_list_col1"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/visit_list_col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_list_col2"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ListView
        android:id="@+id/visit_list_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visit_list_headers_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>